# plugin_demo

./: .gitignore  LICENSE  README.md  xmake.lua
core/include/core/: core.h
core/src/: core.cpp
cpp/app/src/: main.cpp
cpp/plugin/include/plugin/: plugin.h
cpp/plugin/src/: plugin.cpp
cpp/plugin_impl/include/plugin_impl/: plugin_impl.h
plugin_impl/src/: plugin_impl.cpp
rust/: Cargo.toml
rust/app/: Cargo.toml
rust/app/src/: lib.rs  main.rs
rust/engine/: Cargo.toml
rust/engine/src/: engine.rs
rust/plugin/: Cargo.toml
rust/plugin/src/: lib.rs
rust/plugin_impl/: Cargo.toml  build.rs
rust/plugin_impl/src/: lib.rs
